--- a/PersistentGallery/Base.lproj/Main.storyboard
+++ b/PersistentGallery/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Document Browser View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="DocumentBrowserViewController" customModule="PersistentGallery" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="DocumentBrowserViewController" customModule="Persistent_Gallery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -27,7 +27,7 @@
         <!--Image Gallery Collection View Controller-->
         <scene sceneID="7uT-aw-4ZT">
             <objects>
-                <collectionViewController id="Ljg-la-hUw" customClass="ImageGalleryCollectionViewController" customModule="PersistentGallery" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="Ljg-la-hUw" customClass="ImageGalleryCollectionViewController" customModule="Persistent_Gallery" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" dataMode="prototypes" id="mhX-Yp-SGN">
                         <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -53,7 +53,7 @@
                                     </subviews>
                                 </collectionViewCellContentView>
                             </collectionViewCell>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="Image Cell" id="Rtl-wv-qxd" customClass="ImageGalleryCollectionViewCell" customModule="PersistentGallery" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="Image Cell" id="Rtl-wv-qxd" customClass="ImageGalleryCollectionViewCell" customModule="Persistent_Gallery" customModuleProvider="target">
                                 <rect key="frame" x="155" y="0.0" width="128" height="128"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ZV1-n3-9nt">
@@ -124,26 +124,38 @@
         <!--Image View Controller-->
         <scene sceneID="Xso-17-qVB">
             <objects>
-                <viewController id="Zjz-QP-mGU" customClass="ImageViewController" customModule="PersistentGallery" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Zjz-QP-mGU" customClass="ImageViewController" customModule="Persistent_Gallery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qVa-1d-hTl">
                         <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="byh-Gi-0Cx">
-                                <rect key="frame" x="32" y="103" width="985" height="878"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="byh-Gi-0Cx">
+                                <rect key="frame" x="89" y="106" width="1188" height="878"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OFH-z5-hBR">
-                                        <rect key="frame" x="8" y="8" width="969" height="862"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OFH-z5-hBR">
+                                        <rect key="frame" x="20" y="20" width="1148" height="838"/>
                                     </imageView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="OFH-z5-hBR" firstAttribute="centerY" secondItem="byh-Gi-0Cx" secondAttribute="centerY" id="8cT-nl-tmD"/>
+                                    <constraint firstAttribute="bottom" secondItem="OFH-z5-hBR" secondAttribute="bottom" constant="20" id="Z0u-kQ-bg8"/>
+                                    <constraint firstItem="OFH-z5-hBR" firstAttribute="top" secondItem="byh-Gi-0Cx" secondAttribute="top" constant="20" id="e2e-jt-VKV"/>
+                                    <constraint firstAttribute="trailing" secondItem="OFH-z5-hBR" secondAttribute="trailing" constant="40" id="krN-9t-ygC"/>
+                                    <constraint firstItem="OFH-z5-hBR" firstAttribute="leading" secondItem="byh-Gi-0Cx" secondAttribute="leading" constant="20" id="n0y-2s-D6o"/>
+                                    <constraint firstItem="OFH-z5-hBR" firstAttribute="centerX" secondItem="byh-Gi-0Cx" secondAttribute="centerX" id="qRg-WG-YEp"/>
+                                </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="7cK-e9-PHp"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="oo9-wG-cnY"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="XEr-FB-jo8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="XEr-FB-jo8" firstAttribute="trailing" secondItem="byh-Gi-0Cx" secondAttribute="trailing" constant="89" id="0Rk-B6-VfN"/>
+                            <constraint firstItem="XEr-FB-jo8" firstAttribute="bottom" secondItem="byh-Gi-0Cx" secondAttribute="bottom" constant="20" id="17x-AB-Ca4"/>
+                            <constraint firstItem="byh-Gi-0Cx" firstAttribute="centerX" secondItem="qVa-1d-hTl" secondAttribute="centerX" id="OB4-ZA-ZkX"/>
+                            <constraint firstItem="byh-Gi-0Cx" firstAttribute="top" secondItem="XEr-FB-jo8" secondAttribute="top" constant="32" id="thy-3q-yng"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="OQC-hj-7NT"/>
                     <connections>
@@ -153,7 +165,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I7n-Am-Xz4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2789" y="653"/>
+            <point key="canvasLocation" x="2788.7262079062957" y="652.734375"/>
         </scene>
     </scenes>
     <resources>
